--- a/principle-service-dev.yml
+++ b/principle-service-dev.yml
@@ -1,3 +1,3 @@
 principle-service:
     app: "working"
-    getAllStudent: "lb://localhost:8787/teacher/getAllStudent"
+    getAllStudent: "http://localhost:8787/teacher/getAllStudent"
