teacher-service base uri

--- a/principle-service-dev.yml
+++ b/principle-service-dev.yml
@@ -1,3 +1,2 @@
 principle-service:
-    app: "working"
-    getAllStudent: "http://localhost:8787/teacher/getAllStudent"
+    teacher-service: "http://teacher-service/teacher"
